...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="Settings" id="9pv-A4-QxB" customClass="SettingsViewController" customModule="iWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                        <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="zD1-dk-FOs" id="4Ul-07-H05"/>
                            <outlet property="delegate" destination="zD1-dk-FOs" id="119-bg-OSB"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Accounts" id="oUd-DM-Hau">
                        <barButtonItem key="rightBarButtonItem" image="Plus" id="G84-Y2-eCx">
                            <connections>
                                <action selector="addAccount:" destination="zD1-dk-FOs" id="WSZ-nB-Ps3"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                            <outlet property="dataSource" destination="dIe-2H-f3o" id="GTO-1W-jgP"/>
                            <outlet property="delegate" destination="dIe-2H-f3o" id="Odt-b8-LEO"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="OK6-t1-Ewt">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ymC-v3-jFA">
                            <connections>
                                <segue destination="lem-hK-pVq" kind="unwind" unwindAction="close:" id="Zep-5B-sva"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="ArJ-C9-Wcz">
                            <connections>
                                <segue destination="lem-hK-pVq" kind="unwind" unwindAction="saveTransaction:" id="Q7s-nH-RX6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
            </objects>
            <point key="canvasLocation" x="4356" y="396"/>
        </scene>
        <!--Home-->
        <scene sceneID="Dxz-v9-7ix">
            <objects>
                <viewController title="Home" id="n6G-cL-Kn3" customClass="HomeUIViewController" customModule="iWallet" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ou6-oZ-y8H"/>
                        <viewControllerLayoutGuide type="bottom" id="VVZ-31-QKE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="L1e-rV-jst">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
