...
            date?.text = transaction?.date
        
            account?.text = transaction?.account!.name
        
            location?.text = transaction?.location
            
            self.title = "Edit Transaction"
        }
        else
        {
            self.title = "New Transaction"
            currency?.text = tAccount!.currency
            account?.text = tAccount?.name
            location?.text = ""
            
            let dateFomatter = NSDateFormatter()
            dateFomatter.dateStyle = NSDateFormatterStyle.MediumStyle
...
